--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    padding: 200px 0px
 }
 .card {
     max-width: 500px;
